# adv-code-2021

./: CMakeLists.txt  README.md  main.cpp
challenges/: BaseChallenge.cpp  BaseChallenge.h
challenges/01_sonar_sweep/: 01_sonar_sweep.cpp  01_sonar_sweep.h
challenges/02_dive/: 02_dive.cpp  02_dive.h
challenges/03_binary_diagnostic/: 03_binary_diagnostic.cpp  03_binary_diagnostic.h
challenges/03_xxx/: 03_xxx.cpp  03_xxx.h
challenges/04_giant_squid/: 04_giant_squid.cpp  04_giant_squid.h
challenges/05_day_five/: 05_day_five.cpp  05_day_five.h
challenges/05_hydrothermal_venture/: 05_hydrothermal_venture.cpp  05_hydrothermal_venture.h
challenges/06_day_six/: 06_day_six.cpp  06_day_six.h
challenges/06_lanternfish/: 06_lanternfish.cpp  06_lanternfish.h
challenges/07_the_treachery_of_whales/: 07_the_treachery_of_whales.cpp  07_the_treachery_of_whales.h
challenges/08_seven_segment_search/: 08_seven_segment_search.cpp  08_seven_segment_search.h
challenges/09_day_9/: 09_day_9.cpp  09_day_9.h
challenges/10_day_10/: 10_day_10.cpp  10_day_10.h
